<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" >

    <Button
        android:id="@+id/photo_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/photo_button"
        android:textSize="@dimen/button_text_size"
        android:onClick="takePhoto"
        android:layout_centerHorizontal="true" />

    <TextView
        android:id="@+id/timer"
        style="@style/timer_text"
        tools:context=".TimerActivity" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:minWidth="420dp"
        android:orientation="horizontal"
        android:layout_marginBottom="8dp"
        android:layout_alignWithParentIfMissing="false"
        android:layout_centerHorizontal="true">

        <Button
            android:id="@+id/start_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:text="@string/start_button"
            android:textSize="@dimen/button_text_size"
            android:onClick="clickedStart"/>

        <Button
            android:id="@+id/stop_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:text="@string/stop_button"
            android:textSize="@dimen/button_text_size"
            android:onClick="clickedStop"/>

        <Button
            android:id="@+id/settings_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:text="@string/settings_button"
            android:textSize="@dimen/button_text_size"
            android:onClick="gotoSettings" />

    </LinearLayout>

</merge>
